# template-storage

./: .env  Cargo.toml  README.md
src/: config.rs  constants.rs  main.rs  routes.rs
src/handlers/: delete.rs  home.rs  list.rs  mod.rs  size.rs  upload.rs
src/utils/: fs_ops.rs  mod.rs  path.rs
