[package]
name = "template_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.4"
actix-files = "0.6"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
futures-util = "0.3"
sanitize-filename = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }